--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "slitherway"
 version = "0.1.0"
-description = ""
+description = "Python wrapper for the Flyway CLI"
 authors = ["Ryan Brink <rbweb@pm.me>"]
 
 [tool.poetry.dependencies]
