--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,16 +2,12 @@ name: CI
 on: pull_request
 jobs:
   test:
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.10.2
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.0.0
         with:
