--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,5 +14,7 @@ jobs:
           poetry-version: 1.1.13
       - name: Install Dependencies
         run: poetry install
+      - name: Install Flyway
+        run: snap install flyway
       - name: Run Tests
         run: poetry run pytest
