--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "slitherway"
-version = "0.1.2"
+version = "0.1.3"
 description = "Python wrapper for the Flyway CLI"
 authors = ["Ryan Brink <rbweb@pm.me>"]
 keywords = ["migrations", "flyway"]
@@ -13,7 +13,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6 ^3.10"
+python = ">=3.7 <4"
 pydantic = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
